0.83.1
  - Fixed PC speaker emulation to allow higher PC speaker
    frequencies (10x the value of pcrate) to reduce
    hiss/noise/aliasing noise that occurs when games
    program ultrasonic frequencies into the counter to
    "silence" the speaker. "Titus the Fox Marrakech and
    Back" should no longer have audible hissing noises
    between beeps when the game is using the PC speaker.
  - Increased DOS device limit, to avoid E_Exit() crash
    if all LPT and COM devices are enabled along with
    the new CLIP$ device.
  - DIR command fixed to show the volume label of the
    drive you are listing, instead of always the current
    drive (rderooy)
  - Minimum MCB free default changed to better reflect
    a typical MS-DOS setup with minimal to no drivers.
    This should result in a report of 600K-ish memory
    free, which is equivalent to Windows 95 without
    anything loaded except COMMAND.COM.
  - Various improvements to DEL and COPY commands, e.g.
    fixed the DEL /P option having no effect, and "DEL ."
    deleted all files in the current directory silently;
    the COPY command now asks for confirmation before
    overwriting files, and it now supports /Y and /-Y
    options to change this behavior, which can also be
    set from the COPYCMD environment variable. (Wengier)
  - Added support for DOS programs to communicate
    with the clipboard in Windows builds. If the
    "dos clipboard device enable" setting in
    dosbox.conf is set to "true" or "full", a DOS
    device (default name: CLIP$) will be added to
    allow bidirectional communications with the
    clipboard (e.g. "DIR >CLIP$" will write the
    output to the clipboard, and "TYPE CLIP$" will
    show the clipboard contents). Alternatively,
    you can set it to "read" or "write" to allow
    only read or write access for security reasons.
    The DOS device name can also be changed with
    the "dos clipboard device name" setting in
    dosbox.conf. (Wengier)